# ForgeISO

./: .CLAUDE.md  .GEMINI.md  .gitignore  AGENTS.md  ASSURANCE.md  CI_CD_HARDENING_REPORT.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.ci.yml  docker-compose.matrix.yml
.github/scripts/: docker-runner.sh
.github/workflows/: ci-rust.yml  ci.yml  claude.yml  release.yml
cli/src/: main.rs  output.rs
containers/: C0.base.Dockerfile  C1.rust.Dockerfile  C2.sbom.Dockerfile  C3.gui.Dockerfile  C4.security.Dockerfile  C7.lint.Dockerfile  matrix.Dockerfile
docs/: design.md  distro-support.md  matrix.md  runbook-gui.md  runbook-local.md  runbook-release.md  security.md  troubleshooting.md  vm-testing.md
egui-patched/: Cargo.toml
egui-patched/src/: hit_test.rs
engine/src/: autoinstall.rs  config.rs  error.rs  iso.rs  (+13 more)
examples/: inject-arch.yaml  inject-fedora.yaml  inject-mint.yaml  inject-ubuntu.yaml
forge-gui/: Cargo.toml
forge-slint/: Cargo.toml
forge-slint/src/: app.rs  config.rs  defaults.rs  jobs.rs  main.rs  persist.rs  state.rs  worker.rs
forge-slint/ui/: app.slint  theme.slint
forge-slint/ui/components/: design_system.slint  header.slint  log_panel.slint  step_bar.slint  tab_rail.slint
forge-slint/ui/globals/: app_state.slint  form_state.slint
forge-slint/ui/steps/: build.slint  check.slint  configure.slint  source.slint
gui/: package-lock.json  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
packaging/: PKGBUILD
scripts/: cache-image.sh  github-lockdown.sh  vm-launch.sh
(+82 files in other folders)
